# NARFMAP

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs  build.zig  config.mk  crates.nix  flake.nix  justfile  todo.org
.github/workflows/: build.yml  ci.yml  legacy.yml  update-flake-lock.yml
data/tiny/tiny-2x1Xrepeats-1Xinv.v8/: dragen-replay.json
doc/: cli-output.md  developer.md  readme.md  refactor.md  usage.md
docs/: rust-notes.md  zig-notes.md
src/: compare.cpp  main.rs  main.zig
src/dragen/: crc_hash.rs  gen_hash_table.rs  hash_cfg_file.rs  hash_table.rs  hash_table_compress.rs  host_version_hashtable.rs  methylation_hash_table.rs
src/include/align/: Aligner.hpp  Alignment.hpp  AlignmentRescue.hpp  CalculateRefStartEnd.hpp  Cigar.hpp  InsertSizeDistribution.hpp  InsertSizeParameters.hpp  PairBuilder.hpp  Query.hpp  SinglePicker.hpp  VectorSmithWaterman.hpp
src/include/bam/: Bam.hpp  BamBlockReader.hpp
src/include/common/: Debug.hpp  Threads.hpp
src/include/fastq/: FastqBlockReader.hpp  FastqNRecordReader.hpp  Token.hpp
src/include/map/: ChainBuilder.hpp  Mapper.hpp  SeedPosition.hpp
src/include/reference/: Bucket.hpp  ReferenceSequence.hpp
src/include/sam/: SamGenerator.hpp
src/include/sequences/: CrcHasher.hpp  Read.hpp
src/include/workflow/: GenHashTableWorkflow.hpp
src/lib/align/: Aligner.cpp  AlignmentGenerator.cpp  AlignmentRescue.cpp  Cigar.cpp  PairBuilder.cpp  SmithWaterman.cpp  VectorSmithWaterman.cpp  (+1 more)
src/workflow/: BuildHashTable.rs  mod.rs
tests/: ExtendTableGtest.cpp  HashtableGtest.cpp  generate.cpp
(+35 files in other folders)
