[package]
name = "narfmap"
version = "1.4.0"
edition = "2018"

[dependencies]
autocxx = "0.26.0"
clap = { version = "4.4.11", features = ["derive"] }
cxx = "1.0"

[build-dependencies]
autocxx-build = "0.26.0"
miette = { version = "5", features = ["fancy"] } # optional but gives nicer error messages!
